[tool.poetry]
name = "pdf-uniter-bot"
version = "0.1.0"
description = "Simple Telegram Bot to merge images into a pdf"
authors = ["Ceda EI <ceda_ei@webionite.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^13.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
